--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.materialdesign">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,10 +18,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ScrollActivity" android:theme="@style/AppTheme.statusBar"/>
+        <activity
+            android:name=".ScrollActivity"
+            android:theme="@style/AppTheme.statusBar" />
+        <activity
+            android:name=".DetailActivity"/>
 
-        <activity android:name=".DetailActivity" android:theme="@style/AppTheme.Transition"/>
-
+        <activity
+            android:name=".ViewImageActivity"/>
     </application>
 
 </manifest>
